update chat and format

--- a/lib/studio_web/live/chat_live.html.heex
+++ b/lib/studio_web/live/chat_live.html.heex
@@ -1,14 +1,22 @@
 <h2>Sala <%= @id%></h2>
 <%=for message <- @chat.messages do %>
-  <p>
-    <%= message.user.name %>: <%= message.content %>
-  </p>
+ <p>
+   <%= message.user %>: <%= message.content %>
+ </p>
 <% end %>
-
+ 
 <div class="form-group">
-  <%= form_for @message, "#", [phx_submit: :message], fn _f -> %>
-    <%= text_input :message, :content, placeholder: "diz ai..." %>
-    <%= hidden_input :message, :user_name, value: @id  %>
-    <%= submit "submit" %>
-  <% end %>
+ <%= form_for @message, "#", [phx_submit: :message], fn _f -> %>
+   <%= text_input :message, :content, placeholder: "diz ai..." %>
+   <%= hidden_input :message, :user_name, value: "Eu"  %>
+   <%= submit "submit" %>
+ <% end %>
 </div>
+
+<%= if @user.player do %>
+  <div class="members list-group">
+    <%= for card <- @deck do %>
+      <p><%= card.name %> <%= card.points %></p>
+    <% end %>
+  </div>
+<% end %>
